<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="32dp"
        android:text="@string/profile"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#FFD33B"
        android:text="@string/configuration"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibAddContent"
        android:layout_width="408dp"
        android:layout_height="194dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="389dp"
        android:contentDescription="@string/button_to_perform_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/ivProfilePro"
        android:layout_width="89dp"
        android:layout_height="91dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="278dp"
        android:contentDescription="@string/image_of_coach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibAddContent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvBusinessPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePro"
        app:layout_constraintTop_toBottomOf="@+id/ibAddContent"
        tools:text="Business" />

    <TextView
        android:id="@+id/tvAgePro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePro"
        app:layout_constraintTop_toBottomOf="@+id/tvBusinessPro"
        tools:text="Age" />

    <TextView
        android:id="@+id/tvCountryPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePro"
        app:layout_constraintTop_toBottomOf="@+id/tvAgePro"
        tools:text="Country" />

    <TextView
        android:id="@+id/tvLanguagePro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="104dp"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibAddContent"
        tools:text="English" />

    <TextView
        android:id="@+id/tvStrengthPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="96dp"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLanguagePro"
        tools:text="Strength" />

    <ImageView
        android:id="@+id/ivIconProfile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_price"
        app:layout_constraintBottom_toTopOf="@+id/ivIconProfile2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePro"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/ivIconProfile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/add_experiences"
        app:layout_constraintBottom_toTopOf="@+id/ivIconProfile3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/ivIconProfile3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/add_videos"
        app:layout_constraintBottom_toTopOf="@+id/ivIconProfile4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/ivIconProfile4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/add_channels"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <Button
        android:id="@+id/btPrice"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="54dp"
        android:text="@string/price"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/ivIconProfile1"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePro" />

    <Button
        android:id="@+id/btExperiences"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/experiencies"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/ivIconProfile2"
        app:layout_constraintTop_toBottomOf="@+id/btPrice" />

    <Button
        android:id="@+id/btVideos"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/videos"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/ivIconProfile3"
        app:layout_constraintTop_toBottomOf="@+id/btExperiences" />

    <Button
        android:id="@+id/tbChannels"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/channels"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/ivIconProfile4"
        app:layout_constraintTop_toBottomOf="@+id/btVideos" />

</androidx.constraintlayout.widget.ConstraintLayout>