<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btVideos2"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="240dp"
        android:text="@string/privacy"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileAmateur" />

    <Button
        android:id="@+id/btExperiences2"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="240dp"
        android:text="@string/change_account"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btVideos2" />

    <Button
        android:id="@+id/btPrice2"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="240dp"
        android:text="@string/app_updates"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btExperiences2" />

    <ImageView
        android:id="@+id/ivProfileAmateur"
        android:layout_width="116dp"
        android:layout_height="129dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="@string/profile_amateur_image"
        app:layout_constraintEnd_toStartOf="@+id/tvCountryAmateur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvCountryAmateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/ivProfileAmateur"
        app:layout_constraintTop_toBottomOf="@+id/tvAgeAmateur"
        tools:text="Country" />

    <TextView
        android:id="@+id/tvAgeAmateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="4dp"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/ivProfileAmateur"
        app:layout_constraintTop_toBottomOf="@+id/NameAmateur"
        tools:text="Age" />

    <TextView
        android:id="@+id/tvCityAmateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/ivProfileAmateur"
        app:layout_constraintTop_toBottomOf="@+id/tvCountryAmateur"
        tools:text="City" />

    <TextView
        android:id="@+id/NameAmateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="40dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/ivProfileAmateur"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="Name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="171dp"
        android:text="@string/profile"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFavoriteGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="34dp"
        android:text="@string/your_favorite_game"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPrice2" />

    <ImageView
        android:id="@+id/ivGameAmateur"
        android:layout_width="94dp"
        android:layout_height="93dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo_game_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFavoriteGame"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="24dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivGameAmateur"
        app:layout_constraintTop_toBottomOf="@+id/tvFavoriteGame"
        tools:text="GameName" />

    <TextView
        android:id="@+id/tvGameCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="14dp"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/ivGameAmateur"
        app:layout_constraintTop_toBottomOf="@+id/tvGame"
        tools:text="GameCategory" />

    <TextView
        android:id="@+id/tvGameCoaches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="14dp"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/ivGameAmateur"
        app:layout_constraintTop_toBottomOf="@+id/tvGameCategory"
        tools:text="NumberCoaches" />
</androidx.constraintlayout.widget.ConstraintLayout>